# caffe-project-VggNet-ResNet-DenseNet

./: .gitignore  Makefile  Makefile.config  README.md  README.txt  readme.txt
convert/: convert_weights_to_caffemodel.py  darknet2caffe.py  print_caffemodel.py  yolo.prototxt
ljf_captcha_4_ResNet-20_hdf5/: deploy_ResNet_20.prototxt  eval_image.py  solver.prototxt  test_ResNet_20.prototxt  test_ResNet_20_tf.prototxt  test_h5.txt  test_result.sh  train_ResNet_20.prototxt  train_h5.txt  verify.py
ljftest_alphabet/: caffe_ljftest_train_iter_50000.solverstate  convert_mean.py  deploy_fc.prototxt  forecast_ljftest_alphabet.py  imagenet_mean.npy  make_imagenet_mean.sh  net_look.py  product_train_val_sovler_prototxt.py  product_txt.py  run.py  solver.prototxt  test_alphabet_a_image.sh  train_caffenet.sh  train_val.prototxt  verify.py
ljftest_alphabet_ResNet/: create_imagenet.sh  deploy.prototxt  forecast_ljftest_alphabet_ResNet.py  imagenet_mean.binaryproto  imagenet_mean.npy  make_imagenet_mean.sh  net_look.py  product_train_val_sovler_prototxt.py  product_txt.py  readme.txt  run.py  show.py  solver.prototxt  test.prototxt  test_alphabet.sh  test_alphabet_a_image.sh  tools.py  train.prototxt  train_caffenet.sh
ljftest_alphabet_VggNet/: create_imagenet.sh  deploy.prototxt  deploy_fc.prototxt  forecast_ljftest_alphabet_VggNet.py  make_imagenet_mean.sh  product_train_val_sovler_prototxt.py  readme.txt  solver.prototxt  test_alphabet.sh  test_alphabet_a_image.sh  train.txt  (+2 more)
ljftest_alphabet_VggNet_BN/cpp/: CMakeLists.txt  classification.cpp  main  main.cpp  run
(+303 files in other folders)
